finished first version. Next, improve functions organization and css

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 
 
             <label for="country-filter">Country</label>
-            <input type="text" name="country-filter" id="country-filter">
+            <!-- <input type="text" name="country-filter" id="country-filter"> -->
+            <select name="country-filter" id="country-filter">
+                <option value="select">Select country</option>
+            </select>
         </div>
 
 
