modified some functions

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 </head>
 <body>
     <div class="container">
-        <button class="btn">Show Users</button>
-        <div class="filters">
-            <label for="age-filter">Age</label>
-            <input type="number" name="age-filter" id="age-filter">
+        <div class="group">
+            <button class="btn">Show Users</button>
+            <div class="filters">
+                <label for="age-filter">Age</label>
+                <input type="number" name="age-filter" id="age-filter">
 
 
-            <label for="country-filter">Country</label>
-            <!-- <input type="text" name="country-filter" id="country-filter"> -->
-            <select name="country-filter" id="country-filter">
-                <option value="select">Select country</option>
-            </select>
+                <label for="country-filter">Country</label>
+                <select name="country-filter" id="country-filter">
+
+                </select>
+            </div>
         </div>
 
 
